[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtools_dasky92"
version = "0.0.1"
authors = [
  { name="dasky92", email="dasky92@163.com" },
]
description = "A useful datetime utils package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dasky92/dtools"
"Bug Tracker" = "https://github.com/dasky92/dtools/issues"
